# livekit-agent-workshop

./: .env.example  README.md  livekit_basic_agent.py  livekit_inference_agent.py  livekit_mcp_agent.py  pyproject.toml
tests/: conftest.py  test_basic_agent.py  test_evals.py  test_mcp_agent.py
